Bug 1491 - FAIL: macros dot
Summary: FAIL: macros dot
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: gas (show other bugs)
Version: 2.17
: P2 normal
Target Milestone: ---
Assignee: Alan Modra
URL:
Keywords:
: 1893 (view as bug list)
Depends on:
Blocks:
 
Reported: 2005-10-16 22:54 UTC by John David Anglin
Modified: 2009-10-15 11:04 UTC (History)
1 user (show)

See Also:
Host: hppa*-*-hpux*
Target: hppa*-*-hpux*
Build: hppa2.0w-hp-hpux11.11
Last reconfirmed: 2009-10-15 01:19:12


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John David Anglin 2005-10-16 22:54:37 UTC
Executing /xxx/gnu/binutils-2.15.90/src/gas/testsuite/lib/run ../as-new  -alm /x
xx/gnu/binutils-2.15.90/src/gas/testsuite/gas/macros/dot.s >&dump.out
regexp_diff match failure
regexp "^.*:27: Error: unknown pseudo-op: .\.xyz.$"
line   "/xxx/gnu/binutils-2.15.90/src/gas/testsuite/gas/macros/dot.s:16: Error:
unexpected end of file in macro `m' definition"
regexp_diff match failure
regexp "^.*:28: Error: .*$"
line   "GAS LISTING /xxx/gnu/binutils-2.15.90/src/gas/testsuite/gas/macros/dot.s
                        page 1"
regexp_diff match failure
regexp "^[      ]*[1-9][0-9]*[  ]+> \.data$"
line   "  25                    "
regexp_diff match failure
regexp "^[      ]*[1-9][0-9]*[  ]+> labelA:labelB:labelC:labelD:x\.y\.z 4\+2$"
line   "  26                     .purgem .xyz, x.y.z"
regexp_diff match failure
regexp "^[      ]*[1-9][0-9]*[  ]+>> \.align 4$"
line   "  27                     .xyz 0"
regexp_diff match failure
regexp "^[      ]*[1-9][0-9]*[  ]+\?+[  ]+0606[         ]+>> \.byte 4\+2,4\+2$"
line   "  28                    x.y.z 0"
regexp_diff match failure
regexp "^[      ]*[1-9][0-9]*[  ]+\?+[  ]+0000[         ]+> \.skip 2$"
line   "  29                    ..."
extra regexps in /xxx/gnu/binutils-2.15.90/src/gas/testsuite/gas/macros/dot.l st
arting with "^[         ]*[1-9][0-9]*[  ]+> labelZ:labelY:labelX:labelW:\.xyz 4-
2$"
EOF from dump.out
FAIL: macros dot
Comment 1 John David Anglin 2005-11-27 19:41:16 UTC
*** Bug 1893 has been marked as a duplicate of this bug. ***
Comment 2 Ben Elliston 2006-03-28 03:58:58 UTC
This test is passing on my system -- is it still failing on HP-UX, Dave?
Comment 3 dave@hiauly1.hia.nrc.ca 2006-03-28 04:11:16 UTC
Subject: Re:  FAIL: macros dot

> This test is passing on my system -- is it still failing on HP-UX, Dave?

As of a couple of days ago, it was still failing on hpux.

Dave
Comment 4 dave@hiauly1.hia.nrc.ca 2009-10-14 16:21:34 UTC
Subject: Re:  FAIL: macros dot

On Wed, 14 Oct 2009, amodra at bigpond dot net dot au wrote:

                === gas tests ===

Schedule of variations:
    unix

Running target unix
Using /opt/gnu/share/dejagnu/baseboards/unix.exp as board description file for target.
Using /opt/gnu/share/dejagnu/config/unix.exp as generic interface file for target.
Using /xxx/gnu/binutils/src/gas/testsuite/config/default.exp as tool-and-target-specific interface file.
Running /xxx/gnu/binutils/src/gas/testsuite/gas/all/gas.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/alpha/alpha.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/arc/arc.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/arc/warn.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/arm/arm.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/bfin/bfin.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/bfin/error.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/cfi/cfi.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/cr16/cr16.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/cr16/pic.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/cris/cris.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/crx/allinsn.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/d10v/d10v.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/d30v/d30.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/dlx/alltests.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/elf/elf.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/fr30/allinsn.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/fr30/fr30.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/frv/allinsn.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/h8300/h8300-coff.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/h8300/h8300-elf.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/h8300/h8300.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/h8300/t01_mov.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/h8300/t02_mova.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/h8300/t03_add.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/h8300/t04_sub.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/h8300/t05_cmp.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/h8300/t06_ari2.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/h8300/t07_ari3.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/h8300/t08_or.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/h8300/t09_xor.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/h8300/t10_and.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/h8300/t11_logs.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/h8300/t12_bit.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/h8300/t13_otr.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/hppa/basic/basic.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/hppa/parse/parse.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/hppa/reloc/reloc.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/hppa/unsorted/unsorted.exp ...
XPASS: Use $global$ in file which defines it
Running /xxx/gnu/binutils/src/gas/testsuite/gas/i386/i386.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/i860/i860.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/ia64/ia64.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/ieee-fp/x930509a.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/iq2000/allinsn.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/iq2000/load-hazards.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/iq2000/odd-ldw.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/iq2000/odd-sdw.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/iq2000/yield.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/lm32/all.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/lns/lns.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/m32r/allinsn.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/m32r/error.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/m32r/m32r.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/m32r/m32r2.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/m32r/m32rx.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/m32r/pic.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/m32r/rel32.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/m68hc11/m68hc11.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/m68k-coff/gas.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/m68k/all.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/macros/macros.exp ...
FAIL: macros dot
Running /xxx/gnu/binutils/src/gas/testsuite/gas/maxq10/maxq10.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/maxq20/maxq20.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/mcore/allinsn.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/mep/allinsn.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/mep/complex-relocs.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/mips/mips.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/mmix/mmix-err.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/mmix/mmix-list.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/mmix/mmix.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/mn10200/basic.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/mn10300/basic.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/mri/mri.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/msp430/msp430.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/mt/errors.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/mt/mt.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/mt/relocs.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/openrisc/allinsn.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/pdp11/pdp11.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/pe/pe.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/pj/pj.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/ppc/aix.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/ppc/ppc.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/rx/rx.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/s390/s390.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/score/relax.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/score/relax_32.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/sh/arch/arch.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/sh/basic.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/sh/err.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/sh/sh64/err.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/sh/sh64/sh64.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/sparc-solaris/addend.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/sparc-solaris/gas.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/sparc/mismatch.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/sparc/sparc.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/sun4/addend.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/symver/symver.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/tic4x/tic4x.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/tic54x/tic54x.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/v850/basic.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/vax/vax.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/xc16x/xc16x.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/xstormy16/allinsn.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/xtensa/all.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/xtensa/xtensa-err.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/z80/z80.exp ...
Running /xxx/gnu/binutils/src/gas/testsuite/gas/z8k/z8k.exp ...

                === gas Summary ===

# of expected passes            175
# of unexpected failures        1
# of unexpected successes       1
# of expected failures          4
../as-new 2.20.51.20091014

Dave
Comment 5 Alan Modra 2009-10-15 01:19:12 UTC
Looking into it.  Caused by LABELS_WITHOUT_COLONS
Comment 6 Sourceware Commits 2009-10-15 10:58:48 UTC
Subject: Bug 1491

CVSROOT:	/cvs/src
Module name:	src
Changes by:	amodra@sourceware.org	2009-10-15 10:58:34

Modified files:
	gas            : ChangeLog macro.c read.c listing.c 
	gas/testsuite  : ChangeLog 
	gas/testsuite/gas/macros: dot.l dot.s macros.exp 

Log message:
	PR gas/1491
	gas/
	* macro.c: Delete unnecessary function declarations.
	(buffer_and_nest): Support multiple labels per line for
	LABELS_WITHOUT_COLONS targets if the labels do have colons.
	(free_macro): Move so that we don't need forward declaration.
	* read.c (read_a_source_file): Take a copy of macro expansion line
	before we trim labels.
	* listing.c (listing_newline): Adjust stdin line save for
	input_line_pointer still at start of line.
	gas/testsuite/
	* gas/macros/dot.s: Don't start macro invocations is first column.
	* gas/macros/dot.l: Update.
	* gas/macros/macros.exp: Run dot test on more targets.

Patches:
http://sources.redhat.com/cgi-bin/cvsweb.cgi/src/gas/ChangeLog.diff?cvsroot=src&r1=1.3986&r2=1.3987
http://sources.redhat.com/cgi-bin/cvsweb.cgi/src/gas/macro.c.diff?cvsroot=src&r1=1.49&r2=1.50
http://sources.redhat.com/cgi-bin/cvsweb.cgi/src/gas/read.c.diff?cvsroot=src&r1=1.157&r2=1.158
http://sources.redhat.com/cgi-bin/cvsweb.cgi/src/gas/listing.c.diff?cvsroot=src&r1=1.42&r2=1.43
http://sources.redhat.com/cgi-bin/cvsweb.cgi/src/gas/testsuite/ChangeLog.diff?cvsroot=src&r1=1.1568&r2=1.1569
http://sources.redhat.com/cgi-bin/cvsweb.cgi/src/gas/testsuite/gas/macros/dot.l.diff?cvsroot=src&r1=1.2&r2=1.3
http://sources.redhat.com/cgi-bin/cvsweb.cgi/src/gas/testsuite/gas/macros/dot.s.diff?cvsroot=src&r1=1.2&r2=1.3
http://sources.redhat.com/cgi-bin/cvsweb.cgi/src/gas/testsuite/gas/macros/macros.exp.diff?cvsroot=src&r1=1.30&r2=1.31

Comment 7 Alan Modra 2009-10-15 11:04:35 UTC
Fixed, almost exactly four years from when the bug was opened.