	PR gas/1491 gas/ 	* macro.c: Delete unnecessary function declarations. 	(buffer_and_nest): Support multiple labels per line for 	LABELS_WITHOUT_COLONS targets if the labels do have colons. 	(free_macro): Move so that we don't need forward declaration. 	* read.c (read_a_source_file): Take a copy of macro expansion line 	before we trim labels. 	* listing.c (listing_newline): Adjust stdin line save for 	input_line_pointer still at start of line. gas/testsuite/ 	* gas/macros/dot.s: Don't start macro invocations is first column. 	* gas/macros/dot.l: Update. 	* gas/macros/macros.exp: Run dot test on more targets.